--- a/server/pom.xml
+++ b/server/pom.xml
@@ -70,13 +70,14 @@
         <artifactId>slf4j-simple</artifactId>
         <version>1.7.31</version>
     </dependency>
-  </dependencies>
 
-  <dependency>
-    <groupId>com.google.code.gson</groupId>
-    <artifactId>gson</artifactId>
-    <version>2.9.0</version>
-  </dependency>
+    <dependency>
+        <groupId>org.json</groupId>
+        <artifactId>json</artifactId>
+        <version>20220320</version>
+    </dependency>
+
+  </dependencies>
 
 
   <build>
