--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -1,8 +1,6 @@
 name: Chatapp Build, Test & Deploy
 
-on:
-  push:
-    branches: ['master']
+on: push
 
 jobs:
   build:
@@ -31,7 +29,7 @@ jobs:
     - name: Login to Docker Hub
       uses: docker/login-action@v2
       with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        username: 3rdtimecoder
         password: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
 
     - name: Build and Push Docker Images
